# Gazprom_automation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.py  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/core/: schemas.py
app/docs/: feature_matrix.md  overview.md  team_handbook.md
app/prompts/system/: extractor_llm.txt
app/samples/: invalid.json  schema.json  valid.json
app/services/: extract.py  extract_gosha.py
app/services/extractor/: extractor_llm.py  extractor_rule_based.py  ocr_pdf_pytesseract.py
app/services/validation/: validate.py
app/testPipeline/: dynamic_extractor.py  full_pipeline.py  improved_patterns.py  ner_enhacement.py  universal_pasport_shema.py
app/utils/: logs.py  validate.py
backend/: pyproject.toml
backend/app/: Dockerfile  main.py
backend/app/api/v1/: router.py
backend/app/core/: exceptions.py  schemas.py
backend/app/docs/: labeling_guide.md
backend/app/prompts/system/: extractor_llm.txt
backend/app/services/: extract.py
backend/app/services/validation/: validate.py
backend/tests/: test_api.py  test_extract_normalization.py  test_mock.py
data/: LABELING_GUIDE.md  extractor_rule_based.py  ocr_pdf_pytesseract.py
docs/: Presentation.pptx
frontend/: .dockerignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/assets/fonts/: README.txt  fonts.css
frontend/src/components/features/passport/Cell/: Cell.module.scss  Cell.tsx
frontend/src/components/features/passport/Footer/: Footer.module.scss  Footer.tsx
frontend/src/components/features/passport/Item/: Item.module.scss  Item.tsx
frontend/src/components/features/passport/PassportTable/: PassportTable.module.scss  PassportTable.tsx  index.ts
frontend/src/components/features/passport/Stats/: Stats.module.scss  Stats.tsx
frontend/src/components/features/upload/Dropzone/: Dropzone.module.scss  Dropzone.tsx
frontend/src/components/features/upload/FileItem/: FileItem.module.scss  FileItem.tsx  index.ts
frontend/src/components/layout/Header/: Header.module.scss  Header.tsx
frontend/src/components/layout/Sidebar/: Sidebar.module.scss  Sidebar.tsx
frontend/src/components/shared/Modal/: Modal.module.scss  Modal.tsx
frontend/src/pages/PassportCards/: PassportCards.module.scss  PassportCards.tsx  index.ts
frontend/src/pages/PassportUpload/: PassportUpload.module.scss  PassportUpload.tsx  index.ts
frontend/src/store/: useStore.ts
frontend/src/styles/: _globals.scss  _reset.scss  _variables.scss  main.scss
frontend/stitch/: design.html
schemas/: schema.json
(+2 files in other folders)
