[project]
name = "gazprom-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "kolykonon",email = "kononikhinnikolay@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "pydantic (>=2.13.0,<3.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pymupdf (>=1.27.2.2,<2.0.0.0)",
    "ollama (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
